<resources>
    <string name="app_name">ToDo</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="joined_us_before">Joined us before?</string>
    <string name="have_no_account">Don’t have an account?</string>
    <string name="create_account">Create account</string>
    <string name="welcome">Welcome back!</string>
    <string name="personal_plans">Personal plans</string>
    <string name="team_plans">Team plans</string>
    <string name="go_to_plans">Go to plans</string>
    <string name="recent_task">Recent task</string>
    <string name="view_all">view all</string>
    <string name="search">search</string>
    <string name="to_do">ToDo</string>
    <string name="in_progress">inProgress</string>
    <string name="done">Done</string>
    <string name="task_tittle">Title</string>
    <string name="task_desc">Description</string>
    <string name="add_task_title_hint">Add Task Name</string>
    <string name="add_task_desc_hint">Add Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="assign_to">Assign</string>
    <string name="update_task">Update Task</string>
    <string name="language">Language</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="_23_march_20_00">23 march 20:00</string>
    <string name="this_is_my_firs_task_i_should_do_some_thing_but_i_dont_know">this is my firs task i should do some thing but i dont know</string>
    <string name="ms">Ms</string>
    <string name="plans_remaining">plans Remaining</string>
    <string name="_3_plans_remaining">plans Remaining</string>
    <string name="inprogress">inProgress</string>
    <string name="team_task">Team Task</string>
    <string name="ic_graph">ic_graph</string>

    <string name="added_successful">Added Successful </string>
    <string name="added_failed">Added Failed </string>
    <string name="error_toast_message">Enter Title Please</string>
    <string name="error_title_message">Please enter a title</string>
    <string name="error_descrption_message">Please enter a description</string>
    <string name="assignee_not_selected">Please Select a person</string>

    <string-array name="spinner_status">
        <item>To Do</item>
        <item>In Progress</item>
        <item>Done</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="try_again">Try again</string>
    <string name="invalid_account">Invalid account</string>
    <string name="unable_to_login">Unable to login</string>
    <string name="network_error_message">An unexpected error occurred. Please try logging in again after check your network connection</string>
    <string name="empty_form">Must not be empty</string>
    <string name="check_your_internet">check your internet</string>
    <string name="something_went_wrong">something went wrong</string>

    <string name="unable_to_registration">Registration failed due to an unknown error.</string>
    <string name="ok">OK</string>
    <string name="enter_user_name">Please enter a username</string>
    <string name="user_name_requirment">Username must be at least 4 characters with no special characters</string>
    <string name="enter_password">Please enter a password</string>
    <string name="password_requirment">Password must be at least 8 characters</string>
    <string name="register_successful">Registration successful! ✔</string>
    <string name="avatar_team_member">avatar team member</string>
    <string name="all_tasks_chip">All</string>
    <string name="invalid_username_password">Invalid Username or Password</string>
    <string name="change_status_to">change status to</string>

    <string name="unable_to_register">Unable to register</string>
    <string name="network_error_message_register">An unexpected error occurred. Please try to sign up again after check your network connection</string>



    <string-array name="task">
        <item>Personal</item>
        <item>Team</item>
    </string-array>


</resources>