<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:paddingHorizontal="@dimen/spacing_medium"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        style="@style/TextStyle.Title.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/task_tittle"
        android:textColor="@color/color_text_primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTaskTitle"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginTop="@dimen/spacing_normal"
        android:hint="@string/add_task_title_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextStyle.Title.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:textColor="@color/color_text_primary"
        android:text="@string/task_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTaskTitle" />

    <EditText
        android:id="@+id/editTextTaskDescription"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:lines="5"
        android:hint="@string/add_task_desc_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAddTask"
        style="@style/ActiveButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:text="@string/add_task"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>