<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:background="@color/color_background"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_left_arrow"
            app:navigationIconTint="@color/color_text_primary"
            app:title="@string/add_task"
            app:titleTextAppearance="@style/TextStyle.Title.Medium"
            app:titleTextColor="@color/color_text_primary" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/text_view_assign"
        style="@style/TextStyle.Title.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:text="@string/assign_to"
        app:layout_constraintTop_toBottomOf="@id/top_bar" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/recycler_view_profile"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/spacing_normal"
       android:paddingStart="@dimen/spacing_normal"
       android:paddingEnd="@dimen/spacing_medium"
       android:clipToPadding="false"
       android:orientation="horizontal"
       tools:listitem="@layout/item_profile_image"
       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
       app:layout_constraintTop_toBottomOf="@id/text_view_assign"
       />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/task_tittle"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        style="@style/TextStyle.Title.Medium"
        app:layout_constraintTop_toBottomOf="@id/recycler_view_profile"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edit_text_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:padding="@dimen/spacing_medium"
        android:hint="@string/add_task_title_hint"
        style="@style/TextStyle.Body"
        android:textColorHint="@color/color_text_tertiary"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:background="@drawable/card_background"
        app:layout_constraintTop_toBottomOf="@id/text_view_title"/>

</androidx.constraintlayout.widget.ConstraintLayout>