<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/top_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_background"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/login"
            android:paddingVertical="22dp"
            android:paddingHorizontal="@dimen/spacing_medium"
            app:navigationIconTint="@color/black_87"
            app:titleTextColor="@color/black_87"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_medium"
        android:contentDescription="@string/sign_up"
        app:srcCompat="@drawable/image_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/top_app_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_user_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_input"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        android:layout_marginTop="@dimen/spacing_large"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock"
        app:counterEnabled="true"
        app:counterMaxLength="20"
        app:layout_constraintTop_toBottomOf="@id/image_login" >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_background"
            android:maxLength="15"
            android:textColorHint="@color/color_text_tertiary"/>
    </com.google.android.material.textfield.TextInputLayout>







</androidx.constraintlayout.widget.ConstraintLayout>