<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:elevation="0dp"
    android:elevation="0dp"
    android:background="@android:color/transparent"
    android:backgroundTint="@color/cardview_light_background"
    app:strokeWidth="0dp"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/image_view_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/error_24px" />
        <TextView
            android:id="@+id/text_view_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:text="@string/something_went_wrong"
            android:textColor="@color/color_text_primary"
            style="@style/TextStyle.Title.Large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_view_icon" />
        <TextView
            android:id="@+id/text_view_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            style="@style/TextStyle.Body.Medium"
            android:lines="2"
            app:layout_constraintBottom_toTopOf="@id/button_positive"
            android:textColor="@color/color_text_secondary"
            android:text="@string/check_your_internet"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_title" />
        <Button
            android:id="@+id/button_positive"
            style="@style/OutlineButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginVertical="@dimen/spacing_medium"
            android:backgroundTint="@color/color_card"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/ok"
            android:textAlignment="center"
            android:textColor="@color/brand"
            android:textSize="@dimen/font_size_body"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>