<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/item_plan_task_width"
    android:layout_height="@dimen/item_plan_task_height"
    android:layout_marginStart="@dimen/spacing_normal"
    android:layout_marginEnd="@dimen/spacing_normal"
    android:background="@drawable/card_background"
    app:cardCornerRadius="@dimen/radius_medium"
    app:cardElevation="@dimen/zero"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/icon_team_group"
            android:layout_width="@dimen/small_icon_size"
            android:layout_height="@dimen/small_icon_size"
            android:layout_marginStart="@dimen/spacing_normal"
            android:layout_marginTop="@dimen/spacing_xnormal"
            android:background="@drawable/ic_group"
            android:backgroundTint="@color/color_text_primary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_task_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_normal"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/team_plans"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/font_size_body"
            app:layout_constraintBottom_toBottomOf="@+id/icon_team_group"
            app:layout_constraintStart_toEndOf="@+id/icon_team_group"
            app:layout_constraintTop_toTopOf="@+id/icon_team_group" />

        <TextView
            android:id="@+id/text_view_remaining_plans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:text="@string/_3_plans_remaining"
            android:textColor="@color/color_text_secondary"
            android:textSize="@dimen/font_size_body"
            app:layout_constraintStart_toStartOf="@+id/icon_team_group"
            app:layout_constraintTop_toBottomOf="@+id/text_view_task_title" />

        <View
            android:id="@+id/icon_go_to_plan"
            android:layout_width="@dimen/icon_go_to_plan"
            android:layout_height="@dimen/icon_go_to_plan"
            android:layout_marginEnd="@dimen/spacing_normal"
            android:background="@drawable/ic_right_arrow"
            android:backgroundTint="@color/color_primary"
            app:layout_constraintBottom_toBottomOf="@+id/text_view_go_t_plans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_view_go_t_plans" />

        <TextView
            android:id="@+id/text_view_go_t_plans"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_small"
            android:layout_marginBottom="@dimen/spacing_xnormal"
            android:text="@string/go_to_plans"
            android:textAlignment="viewEnd"
            android:textSize="@dimen/font_size_body"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/icon_go_to_plan"
            app:layout_constraintStart_toStartOf="@+id/icon_team_group" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>


